--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.jenkins-ci.plugins</groupId>
 		<artifactId>plugin</artifactId>
-        <version>4.53</version>
+        <version>4.83</version>
         <relativePath />
 	</parent>
 
@@ -23,7 +23,7 @@
 
     <properties>
         <changelist>999999-SNAPSHOT</changelist>
-        <jenkins.version>2.361.4</jenkins.version>
+        <jenkins.version>2.440.3</jenkins.version>
         <!-- TODO fix violations -->
         <spotbugs.threshold>High</spotbugs.threshold>
     </properties>
@@ -32,8 +32,8 @@
         <dependencies>
             <dependency>
                 <groupId>io.jenkins.tools.bom</groupId>
-                <artifactId>bom-2.361.x</artifactId>
-                <version>1750.v0071fa_4c4a_e3</version>
+                <artifactId>bom-2.440.x</artifactId>
+                <version>3135.v6d6c1f6b_3572</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -48,7 +48,6 @@
     	<dependency>
     		<groupId>org.mockito</groupId>
     		<artifactId>mockito-core</artifactId>
-    		<version>1.9.5</version>
     		<scope>test</scope>
     	</dependency>
     </dependencies>
